--- a/imgui.ini
+++ b/imgui.ini
@@ -10,6 +10,16 @@ Collapsed=0
 
 [Window][Hello, world!]
 Pos=10,10
-Size=1279,693
+Size=1260,700
+Collapsed=0
+
+[Window][Lo lamentamos pero has perdido ]
+Pos=10,10
+Size=1260,700
+Collapsed=0
+
+[Window][¡HAS GANADO FELICIDADES!!!!!! ]
+Pos=10,10
+Size=1260,700
 Collapsed=0
 
